# ComfyUI-LLM-Session

./: .comfyignore  .gitattributes  ADVANCED_PARAMETERS.ja.md  ADVANCED_PARAMETERS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  PARAMETERS.md  README.ja.md  README.md  REFACTORING_RULES.md  __init__.py  llm_session_nodes.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: Ideogram_prompt_gen.json  simple_advanced.example.json  simple_defaults.json
core/: __init__.py  continue_rewrite.py  defaults.py  generation_runner.py  kv_state.py  logging_utils.py  runtime_container.py  turn_types.py
docs/: acceptable-silent-errors.md  advanced-simple-config-notes.md  architecture.md  change-documentation-guidelines.md  error-handling-audit.md  known-issues.md  logging-guidelines.md  model-specific-parameter-flow.md  refactoring-rules.md
examples/: example_workflow.json
infra/: __init__.py  history_store.py
services/: __init__.py  chat_turn_service.py  generation_execution_service.py  history_persistence_service.py  kv_state_service.py  turn_execution_service.py
tests/: conftest.py  test_defaults_consistency.py  test_gguf_discovery_case_insensitive.py  test_input_type_defaults.py  test_media_input_messages.py  test_model_family_aliases.py  test_model_specific_parameter_flow.py  test_runtime_container_integration.py  test_simple_wrapper_defaults.py  test_smoke.py  test_strip_reasoning_output.py  test_summary_helper_defaults.py  test_tensor_split_config.py
tests/core/: test_continue_rewrite.py  test_generation_runner.py  test_kv_state.py  test_logging_utils.py
tests/infra/: test_history_store.py
tests/services/: test_chat_turn_service.py  test_generation_execution_service.py  (+1 more)
web/: llm_session_media_migration.js
