[project]
name = "comfyui-llm-session"
description = "Local LLM session nodes for ComfyUI using GGUF and llama.cpp, supporting Llama, Mistral, Qwen, DeepSeek, GLM, Gemma, Phi, LLaVA and gpt-oss, enabling both user–model chat and model-to-model dialogue without external runtimes like Ollama."
version = "1.0.2"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
  "llama-cpp-python>=0.3.16",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/kantan-kanto/ComfyUI-LLM-Session"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kantan-kanto/ComfyUI-LLM-Session/blob/main/README.md"
"Bug Tracker" = "https://github.com/kantan-kanto/ComfyUI-LLM-Session/issues"

[tool.comfy]
PublisherId = "kantan-kanto"
DisplayName = "ComfyUI-LLM-Session"
# Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

